@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ec.cjpq.droolsdemo</groupId>
 	<artifactId>droolsdemo</artifactId>
@@ -8,9 +8,10 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>droolsdemo</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<drools.version>6.5.0.Final</drools.version>
 	</properties>
 
 	<organization>
@@ -26,7 +27,7 @@
 			<url>carlosjulioperez@gmail.com</url>
 		</developer>
 	</developers>
-	
+
 	<build>
 		<!-- <finalName>droolsdemo</finalName> -->
 		<plugins>
@@ -49,6 +50,23 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.22</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-compiler</artifactId>
+			<version>${drools.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-core</artifactId>
+			<version>${drools.version}</version>
+		</dependency>
 	</dependencies>
-	
+
 </project>
