@@ -1,0 +1,16 @@
+package ec.cjpq.droolsdemo.drools
+
+import ec.cjpq.droolsdemo.model.Person
+
+dialect "mvel"
+
+/*
+ * This rule checks that a person is >=21
+ */
+rule "Person is 21"
+	when 
+		$person: Person(age>=21)
+	then
+		System.out.println($person.name + " has " + $person.age + " years old.");
+end
+
